--- a/react-blog/src/index.css
+++ b/react-blog/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main-container{
+    background-color:pink;
+    width:100vw;
+    display:flex;
+    flex-direction:column;
+    
+}
+.navbar-div{
+    background-color:yellow;
+    display:flex;
+    justify-content:space-between;
+    padding:10px 20px;
+}
+.navbar-div h2{
+    margin:0px;
+}
+.link-div{
+    background-color:purple;
+    display:flex;
+    gap:20px;
+    align-items:center;
+}
+.link-div a{
+    background-color:pink;
+    text-decoration:none;
+}
+.home-div{
+    background-color:pink;
+    padding:0px 50px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color:blue;
+    margin:0px;
+    width:100vw;
+}
+.content-div{
+    background-color:red;
+    padding:20px;
+}
+p{
+    margin:0px;
+    font-size:16px;
+}
+h2{
+    margin:0px;
+}
+
+.blog-div{
+    background-color:white;
+}
+.blog-div h2{
+    color:red;
+}
+
+
+.blog-content{
+    background-color:white;
+    position:relative;
+}
+.blog-content:hover{
+    box-shadow:1px 5px 10px 1px black;
+}   
+
+.blog-container{
+    background-color:purple;
+    display:flex;
+    flex-direction:column;
+    gap:10px;
 }
