--- a/react-blog/src/index.css
+++ b/react-blog/src/index.css
@@ -3,6 +3,7 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
+    margin: auto;
 
 }
 
@@ -10,11 +11,15 @@
     background-color: yellow;
     display: flex;
     justify-content: space-between;
-    padding: 10px 20px;
+    padding: 20px 40px;
 }
 
 .navbar-div h2 {
     margin: 0px;
+}
+
+.navbar-div a {
+    text-decoration: none;
 }
 
 .link-div {
@@ -25,22 +30,26 @@
 
 .link-div a {
     text-decoration: none;
+    color: #f1356d;
+    font-size: 20px;
 }
 
 .home-div {
-    background-color: pink;
-    padding: 0px 50px;
+    background-color: yellow;
 }
 
 body {
     background-color: blue;
     margin: 0px;
-    width: 100vw;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .content-div {
-    background-color: red;
+    background-color: purple;
     padding: 20px;
+    width: 50%;
+    margin: auto;
 }
 
 p {
@@ -50,6 +59,7 @@ p {
 
 h2 {
     margin: 0px;
+    color: #f1356d;
 }
 
 .blog-div {
@@ -62,6 +72,9 @@ h2 {
 
 .blog-content {
     background-color: white;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .blog-content:hover {
@@ -85,17 +98,33 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 80%;
+    width: 100%;
 }
 
 .add-blog-container .row {
     background-color: yellow;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .row label {
-    background-color: green;
-    min-width: 100px;
+    color: #f1356d;
+    font-size: 20px;
+}
+
+.row input {
+    height: 30px;
+    border: 1px solid #4d4d4d;
+    border-radius: 5px;
+}
+
+.row select {
+    height: 40px;
+    border: 1px solid #4d4d4d;
+    background-color: #ffffff;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 button {
@@ -120,4 +149,14 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.blog-detail-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-detail-container button {
+    min-width: 80px;
+    margin-right: 0;
 }
