--- a/react-blog/src/index.css
+++ b/react-blog/src/index.css
@@ -1,5 +1,4 @@
 .main-container {
-    background-color: pink;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -8,7 +7,7 @@
 }
 
 .navbar-div {
-    background-color: yellow;
+    border-bottom: 1px solid #f1356d;
     display: flex;
     justify-content: space-between;
     padding: 20px 40px;
@@ -34,20 +33,16 @@
     font-size: 20px;
 }
 
-.home-div {
-    background-color: yellow;
-}
+
 
 body {
-    background-color: blue;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
 }
 
 .content-div {
-    background-color: purple;
-    padding: 20px;
+    padding: 20px 0px;
     width: 50%;
     margin: auto;
 }
@@ -62,28 +57,20 @@ h2 {
     color: #f1356d;
 }
 
-.blog-div {
-    background-color: white;
-}
-
-.blog-div h2 {
-    color: red;
-}
 
 .blog-content {
-    background-color: white;
+    background-color: #ffffff;
     padding: 10px;
     display: flex;
     flex-direction: column;
 }
 
 .blog-content:hover {
-    box-shadow: 1px 5px 10px 1px black;
+    box-shadow: 0px 3px 5px 1px #000000;
 }
 
 
 .blog-container {
-    background-color: purple;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -94,7 +81,6 @@ h2 {
 }
 
 .add-blog-container form {
-    background-color: pink;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -102,7 +88,6 @@ h2 {
 }
 
 .add-blog-container .row {
-    background-color: yellow;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -139,7 +124,6 @@ button {
 }
 
 .add-blog-container {
-    background-color: blue;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -159,4 +143,12 @@ button {
 .blog-detail-container button {
     min-width: 80px;
     margin-right: 0;
+}
+
+article p {
+    word-wrap: break-word;
+}
+
+small {
+    color: #000000;
 }
